samples/_failures_safe/1760958456_eb7490_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67a71517.c: In function ‘process_event’:
./samples/SAFE/__tmp_67a71517.c:158:5: error: expected expression at end of input
  158 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_67a71517.c:158:5: error: expected declaration or statement at end of input
